testing/error/error2.inp
* B BETA GAMMA III IV I II UNSEEN
FROM his shoulder Hiawatha
Took the camera of rosewood
